--- a/src/components/Invoice/Invoice.css
+++ b/src/components/Invoice/Invoice.css
@@ -83,9 +83,30 @@
   font-weight: 600;
   margin-bottom: 0;
   padding: 15px 15px 0;
-
+  text-align: center;
+}
+.quantity-badge {
+    position: absolute;
+    color: white;
+    /* border-radius: 50%; */
+    /* padding: 6px 8px; */
+    font-size: 0.85rem;
+    font-weight: bold;
+    /* display: flex
+; */
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    padding: 0 1rem;
+    /* width: unset; */
+    background: var(--bg);
 }
 
+.quantity-badge span {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
 .category-bar {
   position: fixed;
   top: 3rem;
@@ -108,7 +129,7 @@
 }
 
 .category-bar button {
-  margin: 0.3rem .6rem;
+  margin: 0.3rem 0.6rem;
   font-size: 1.2rem;
   font-weight: 700;
   text-align: left;
@@ -136,20 +157,26 @@
   padding: 4rem 0;
 }
 .category-container {
-  border-radius: 10px;
-  background-color: #fff;
   background-clip: border-box;
-  border: 1px solid rgba(0, 0, 0, 0.125);
   margin: 1rem;
-  box-shadow: 1px 6px 6px 3px grey;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(22%, 1fr));
+  gap: 1rem;
 }
 .main-box {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   /* border-bottom: 1px solid grey; */
   margin: 0.3rem;
+  border-radius: 10px;
+  background-color: #dfdfdb;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  box-shadow: 1px 6px 6px 3px grey;
+  cursor: pointer;
 }
-
+.highlighted {
+  background-color: #e6ffe6; /* Light green or any color you like */
+}
 .invoice-container {
   display: flex;
   width: 100%;
@@ -157,17 +184,15 @@
 }
 
 .category-barr {
-  width: 20%;
-  /* padding: 10px; */
   border-right: 1px solid #ddd;
 }
 
 .main-section {
-  width: 40%;
+  width: 70%;
   padding: 10px;
 }
-.sample-section{
-  width: 35%;
+.sample-section {
+  width: 30%;
   padding: 10px 0 8rem;
   position: fixed;
   top: 0;
@@ -188,13 +213,13 @@
 }
 
 .sub-box {
-  display: flex;
-  flex-direction: column;
-  width: 55vw;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  word-wrap: break-word;
-  padding-left: .7rem;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-wrap: break-word;
+    padding: 1rem .2rem;
+    text-align: center;
 }
 
 .p-name {
@@ -205,11 +230,11 @@
   line-height: 30px;
   font-weight: 600;
 }
-.p-name-price{
+.p-name-price {
   font-weight: 600;
   font-size: 17px;
   line-height: 25.5px;
-  color: var(--bg)
+  color: var(--bg);
 }
 .sub-box h3 {
   margin: 0;
@@ -259,7 +284,7 @@
   font-size: 20px;
 }
 .quantity-btn span {
-  margin: 0 .4rem;
+  margin: 0 0.4rem;
 }
 .icons {
   background: transparent;
@@ -270,7 +295,7 @@
   padding-bottom: 7px;
   border: none;
 }
-.icon{
+.icon {
   color: var(--bg);
   background: transparent;
   border: none;
@@ -293,7 +318,7 @@
   width: calc(100%);
   background: transparent;
   z-index: 2;
-  gap: 0.1rem;  
+  gap: 0.1rem;
 }
 
 .invoice-btn button {
@@ -306,7 +331,7 @@
   color: white;
   padding: 12px 24px;
   /* border: none; */
-  border-radius: 1rem 1rem 0 0 ;
+  border-radius: 1rem 1rem 0 0;
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -328,14 +353,14 @@
   color: white;
 }
 
-.invoice-kot-btn{
+.invoice-kot-btn {
   color: white;
   padding: 10px;
   font-size: 1rem;
   background: white;
   border-radius: 1rem 1rem 0 0;
 }
-.invoice-kot-btn h2{
+.invoice-kot-btn h2 {
   margin: auto;
   font-size: 1.2rem;
   color: var(--bg);
@@ -466,8 +491,8 @@ h3 {
 }
 
 input[type="checkbox"] {
-    accent-color: var(--bg); /* Set your desired color */
-  }
+  accent-color: var(--bg); /* Set your desired color */
+}
 
 .save-btn {
   display: block;
@@ -496,9 +521,6 @@ input[type="checkbox"] {
   font-weight: 700;
 }
 
-
-
-
 /* Modal Overlay */
 .modal-overlay {
   position: fixed;
@@ -512,7 +534,7 @@ input[type="checkbox"] {
   align-items: center;
   justify-content: center;
   z-index: 2000;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 /* Modal Content */
@@ -534,8 +556,14 @@ input[type="checkbox"] {
 
 /* Animation */
 @keyframes fadeIn {
-  from { transform: scale(0.95); opacity: 0; }
-  to { transform: scale(1); opacity: 1; }
+  from {
+    transform: scale(0.95);
+    opacity: 0;
+  }
+  to {
+    transform: scale(1);
+    opacity: 1;
+  }
 }
 
 /* Close Button */
@@ -632,7 +660,7 @@ input[type="checkbox"] {
   color: #3498db;
 }
 
-.kot-timer span{
+.kot-timer span {
   color: red;
 }
 
@@ -640,16 +668,13 @@ input[type="checkbox"] {
 .category-btn.non-veg {
   background-color: #c0646d;
   color: white;
-  border: 1px solid #ffcdd2; 
+  border: 1px solid #ffcdd2;
 }
 
 .category-btn.non-veg.active {
-  background-color: #ff0026; 
+  background-color: #ff0026;
   font-weight: bold;
 }
-
-
-
 
 /* make them sit in a row */
 .order-type {
@@ -704,12 +729,12 @@ input[type="checkbox"] {
   color: #fff;
 }
 
-.kot-btn{
+.kot-btn {
   background-color: var(--bg); /* or your brand color */
   color: white;
   padding: 12px 24px;
   /* border: none; */
-  border-radius: 1rem 1rem 0 0 ;
+  border-radius: 1rem 1rem 0 0;
   cursor: pointer;
   display: flex;
   align-items: center;
