added customer info before kot and change theme color also

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 :root {
-  --bg: #ED6629;
+  /* --bg: #ED6629; */
+  --bg: #3b0101;
+  --text: #9b0000;
   --in: #2d3748;
   --out: #1a202c;
   --light: #edf2f7;
