--- a/src/components/data/CustomerData.css
+++ b/src/components/data/CustomerData.css
@@ -53,7 +53,7 @@
 /* Customer title style */
 .customer-title {
   margin-bottom: 10px;
-  color: var(--bg);
+  color: var(--text);
   font-size: 24px;
   line-height: 36px;
   font-weight: 600;
